Made the EditEase logo svg fit more dynamically into the login screen, should no longer be clipping behind the login interface or moving offcenter. Made the SideNav resize with window resizing. Created connection to event listeners for ctrl scrolling on the viewport to implement zoom controls. Made the SideNav list more compactly implemented

--- a/ui/src/components/DropZone.module.css
+++ b/ui/src/components/DropZone.module.css
@@ -1,6 +1,29 @@
 .dropzone {
-  width: 100%;
-  height: 100%;
-  background-color: #00000000;
+    position: relative;
+    max-width: 1000%;
+    max-height: 1000%;
+    min-width: 10%;
+    min-height: 10%;
+    width: 100%;
+    height: 100%;
+    background-color: #00000000;
+    justify-content: center;
+    align-items: center;
+    overflow: scroll;
+}
+
+.mask {
+    position: absolute;
+    padding: 20vh 20vw 20vh 20vw;
+}
+
+.mask:not(img) {
+    width: 80vw;
+    height: 80vh;
+}
+
+.mask:only-child {
+    width: 100%;
+    height: 100%;
 }
 
