--- a/ui/src/menu/SideNav.module.css
+++ b/ui/src/menu/SideNav.module.css
@@ -32,7 +32,9 @@
 }
 
 .nav {
-    width: 300px;
+    max-width: 300px;
+    width: 20vw;
+    min-width: 80px;
     height: 100%;
     background-color: #2f2f2f;
     color: #ffffff;
@@ -45,14 +47,18 @@
 .nav div {
     padding-top: 1.5em;
     padding-bottom: 1.5em;
+    padding-right: 1em;
+    display: flex;
     align-self: stretch;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .nav div svg {
     width: 30px;
     height: 30px;
     color: #ffffff;
-    transform: translateX(850%) rotate(180deg);
+    transform: rotate(180deg);
     transition: 0.3s;
 }
 
@@ -63,7 +69,7 @@
 
 .nav div:hover svg {
     color: #000000;
-    transform: translateX(800%) rotate(180deg);
+    transform: translateX(-50%) rotate(180deg);
     transition: 0.3s;
 }
 
