--- a/ui/src/pages/EditEase.module.css
+++ b/ui/src/pages/EditEase.module.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    overflow: hidden;
 }
 
 .viewport {
@@ -13,10 +14,6 @@
     top: 0;
     left: 0;
     z-index: 0;
-}
-
-.viewport div {
-    width: 100%;
-    height: 100%;
+    overflow: hidden;
 }
 
