--- a/ui/src/pages/Login.module.css
+++ b/ui/src/pages/Login.module.css
@@ -13,9 +13,12 @@
 .logo-box {
     width: 60%;
     height: 40%;
-    margin-bottom: 5em;
-    margin-left: 52.5%;
-    margin-right: 25%;
     justify-content: center;
+}
+
+.logo-box svg {
+    width: 100%;
+    height: 100%;
+    transform: translateY(20%) scale(1.5);
 }
 
